force-app/main/default/objects/Employee_Wage_Rate__c/Employee_Wage_Rate__c.object-meta.xml
<CustomObject>
    <label>Employee Wage Rate</label>
    <nameField>
        <displayFormat>EWR-{0000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Wage Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>