force-app/main/default/objects/Employee_Wage_Rate__c/fields/Apprentice_Rate__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Rate__c</fullName>
    <label>Apprentice Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>