force-app/main/default/objects/Employee_Wage_Rate__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>