force-app/main/default/objects/Employee_Wage_Rate__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>Effective_Time_Card_Period__r.AcctSeed__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>