force-app/main/default/objects/Employee_Wage_Rate__c/fields/Holiday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Hours__c</fullName>
    <label>Holiday Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>